added images and style sheet

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <title>
       mattonsoftware.com
     </title>
+    <link rel="stylesheet" type="text/css" href="style.css" /> 
   </head>
   <body>
     <h1>Matt Dunn</h1>
+    <h2>Whack-a-mole extraordinaire</h2>
     <div id="where-to-find-me">
-      <a href="https://twitter.com/#!/mattpdunn"><img alt="twitter" src=""></a>
-      <a href="https://github.com/mattdunn"><img alt="github" src=""></a>
-      <a href="http://www.flickr.com/mattpdunn"><img alt="flickr" src=""></a>
-      <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin" src=""></a>
-      <a href="http://delicious.com/mattdunn"><img alt="delicious" src=""></a>
+      <a href="https://twitter.com/#!/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter-bird-white-on-blue.png"></a>
+      <a href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/Octocat.png"></a>
+      <a href="http://www.flickr.com/mattpdunn"><img alt="flickr: mattpdunn" src=""></a>
+      <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/LinkedIn_IN_Icon_55px.png"></a>
+      <a href="http://delicious.com/mattdunn"><img alt="delicious: mattdunn" src=""></a>
     </div> 
   </body>
 </html>
