--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>
       mattonsoftware.com
     </title>
-    <link rel="stylesheet" type="text/css" href="style.css" /> 
+    <link rel="stylesheet" type="text/css" href="styles/style.css" /> 
+    <script type="text/javascript" src="scripts/jquery-1.7.2.min.js"></script> 
   </head>
   <body>
     <h1>Matt Dunn</h1>
