--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
       mattonsoftware.com
     </title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" /> 
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lobster" />
     <script type="text/javascript" src="scripts/jquery-1.7.2.min.js"></script> 
+    <script type="text/javascript" src="scripts/jquery.lettering.js"></script> 
+    <script type="text/javascript" src="scripts/main.js"></script> 
   </head>
   <body>
-    <h1>Matt Dunn</h1>
-    <h2>Whack-a-mole extraordinaire</h2>
+    <h1 class="spiffy-text">Matt Dunn</h1>
     <div id="where-to-find-me">
       <a href="https://twitter.com/#!/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter-bird-white-on-blue.png"></a>
       <a href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/Octocat.png"></a>
