playing with basic isotope layout; doesnt animate on window resize?

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
       mattonsoftware.com
     </title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" /> 
+    <link rel="stylesheet" type="text/css" href="styles/isotope-style.css" /> 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lobster" />
     <script type="text/javascript" src="scripts/jquery-1.7.2.min.js"></script> 
     <script type="text/javascript" src="scripts/jquery.lettering.js"></script> 
+    <script type="text/javascript" src="scripts/jquery.isotope.min.js"></script> 
     <script type="text/javascript" src="scripts/main.js"></script> 
   </head>
   <body>
@@ -18,5 +20,10 @@
       <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/LinkedIn_IN_Icon_55px.png"></a>
       <a href="http://delicious.com/mattdunn"><img alt="delicious: mattdunn" src=""></a>
     </div> 
+    <div id="container">
+      <div class="item"><a href="http://flickr.com/photos/mattpdunn/sets/72157629836782058/" ><img src="http://farm8.staticflickr.com/7080/7244477818_ab309e1dd2_s.jpg" width="75" height="75" alt="Lords 2012"></a></div>
+      <div class="item"><a href="https://github.com/theproductguy/CuteTime/">Cute Time</a></div>
+      <div class="item"><a href="http://flickr.com/photos/mattpdunn/sets/72157625725434380/"><img src="http://farm6.staticflickr.com/5005/5314439995_185b6d54bf_s.jpg" width="75" height="75" alt="Tasmania 2010"></a></div>
+    </div>
   </body>
 </html>
