shift link hiding to css

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <h1 class="spiffy-text">Matt Dunn</h1>
     <div id="where-to-find-me">
-      <a style="display:none" href="https://twitter.com/#!/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter.png"></a>
-      <a style="display:none" href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/github2.png"></a>
-      <a style="display:none" href="http://www.flickr.com/mattpdunn"><img alt="flickr: mattpdunn" src="images/flickr.png"></a>
-      <a style="display:none" href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
-      <a style="display:none" href="http://delicious.com/mattdunn"><img alt="delicious: mattdunn" src="images/delicious.png"></a>
+      <a href="https://twitter.com/#!/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter.png"></a>
+      <a href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/github2.png"></a>
+      <a href="http://www.flickr.com/mattpdunn"><img alt="flickr: mattpdunn" src="images/flickr.png"></a>
+      <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
+      <a href="http://delicious.com/mattdunn"><img alt="delicious: mattdunn" src="images/delicious.png"></a>
     </div> 
   </body>
 </html>
