added footer for icon attribution

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <a href="http://www.flickr.com/mattpdunn"><img alt="flickr: mattpdunn" src="images/flickr.png"></a>
       <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
       <a href="http://delicious.com/mattdunn"><img alt="delicious: mattdunn" src="images/delicious.png"></a>
-    </div> 
+    </div>
+    <footer>
+      Icons courtesy of <a href="http://artimonier.tk/">Artimonier.tk</a> and <a href="http://www.icondeposit.com/theicondeposit:106">IconDeposit.com</a>
+    </footer> 
   </body>
 </html>
