remove shebang from twitter uri

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1 class="spiffy-text">Matt Dunn</h1>
     <div id="where-to-find-me">
-      <a href="https://twitter.com/#!/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter.png"></a>
+      <a href="https://twitter.com/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter.png"></a>
       <a href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/github2.png"></a>
       <a href="http://www.flickr.com/mattpdunn"><img alt="flickr: mattpdunn" src="images/flickr.png"></a>
       <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
