--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       mattonsoftware.com
     </title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" /> 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lobster" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
     <script type="text/javascript" src="scripts/jquery-1.7.2.min.js"></script> 
     <script type="text/javascript" src="scripts/jquery.lettering.js"></script> 
     <script type="text/javascript" src="scripts/main.js"></script> 
