--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="where-to-find-me">
       <a href="https://twitter.com/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter.png"></a>
       <a href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/github2.png"></a>
-      <a href="http://www.flickr.com/mattpdunn"><img alt="flickr: mattpdunn" src="images/flickr.png"></a>
-      <a href="http://au.linkedin.com/in/mattpdunn"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
-      <a href="http://delicious.com/mattdunn"><img alt="delicious: mattdunn" src="images/delicious.png"></a>
+      <a href="https://www.instagram.com/mattpdunn/"><img alt="instagram: mattpdunn" src="images/instagram.png"></a>
+      <a href="https://www.linkedin.com/in/mattpdunn/"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
+      <a href="https://pinboard.in/u:mattdunn"><img alt="pinboard: mattdunn" src="images/pinboard.png"></a>
     </div>
   </body>
 </html> 
