change links to text only

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <h1 class="spiffy-text">Matt Dunn</h1>
     <div id="where-to-find-me">
-      <a href="https://twitter.com/mattpdunn"><img alt="twitter: @mattpdunn" src="images/twitter.png"></a>
-      <a href="https://github.com/mattdunn"><img alt="github: mattdunn" src="images/github2.png"></a>
-      <a href="https://www.instagram.com/mattpdunn/"><img alt="instagram: mattpdunn" src="images/instagram.png"></a>
-      <a href="https://www.linkedin.com/in/mattpdunn/"><img alt="linkedin: mattpdunn" src="images/linkedin.png"></a>
-      <a href="https://pinboard.in/u:mattdunn"><img alt="pinboard: mattdunn" src="images/pinboard.png"></a>
+      <a href="https://twitter.com/mattpdunn"><img alt="twitter: @mattpdunn">Twitter</a>
+      <a href="https://github.com/mattdunn"><img alt="github: mattdunn">GitHub</a>
+      <a href="https://www.instagram.com/mattpdunn/"><img alt="instagram: mattpdunn">Instagram</a>
+      <a href="https://www.linkedin.com/in/mattpdunn/"><img alt="linkedin: mattpdunn">LinkedIn</a>
+      <a href="https://pinboard.in/u:mattdunn"><img alt="pinboard: mattdunn">Pinboard</a>
     </div>
   </body>
 </html> 
